<resources>
    <string name="app_name">BudgetingApp</string>
    <string name="monthly_amount">Monthly Amount</string>
    <string name="cal_budget">Calculate</string>
    <string name="monthlyamount">Monthly Amount</string>
    <string name="budget_category">Select A budget Category</string>
    <string name="add_new_category">Add a new category</string>
    <string name="calculated_budget">Calculated Budget</string>
    <string name="monthly_income">Your Monthly Income</string>
    <string name="category_1">Category #1</string>
    <string name="category_2">Category #2</string>
    <string name="content_for_category_2">category 2 value</string>
    <string name="name">Rs.</string>
    <string name="Rs">Rs.</string>
    <string name="category_3">Category #3</string>
    <string name="rs">Rs.</string>
    <string name="category_4">Category #4</string>
    <string name="cat3_rs">Rs.</string>
    <string name="total_expense">Total Expense</string>
    <string name="total_expense_rs">Rs.</string>
    <string name="button">Button</string>
    <string name="new_category"><b>New Category</b></string>
    <string name="category_name">Category Name</string>
    <string name="new_category_1">Expense #1</string>
    <string name="expence_amount">Amount</string>
    <string name="add_new_expanse">Button</string>
    <string name="add_new_expense">Add new Expense</string>
    <string name="page_title"><b>Select a Category</b></string>
    <string name="view_category_details">View Details</string>
    <string name="delete_category">Delete</string>
    <string name="page_title_viewDetails"><b>Category #1</b></string>
    <string name="expense_1">Expence #1</string>
    <string name="expence_2">Expense #2</string>
    <string name="expense_3">Expence #3</string>
    <string name="update">Update</string>
    <string name="calculate_budget">Calculate Your Budget</string>
    <string name="user_name">User name</string>
    <string name="todo">TODO</string>
    <string name="budget_calculator">Budget Calculator</string>
    <string name="expences_tracker">Expences Tracker</string>
    <string name="currencey_converter">Currencey Converter</string>
    <string name="login">Login</string>
    <string name="menu">MENU</string>
    <string name="view_articles">View Articles</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="view_profile">View Profile</string>
    <string name="welcome_quot_user_name_quot">Welcome \"User name\"</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="nic">NIC</string>
    <string name="phone_number_format">\"07XXXXXXXX\"</string>
    <string name="email_format">\"Email\"</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="change_photo">change Photo</string>
    <string name="name_input">Name</string>
    <string name="input_email">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="input_password">Password</string>
    <string name="Input_phone_number">Phone Number</string>
    <string name="input_nic">NIC</string>
    <string name="hint_nic">NIC</string>
    <string name="update_profile">Update Profile</string>
</resources>