<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    tools:context=".BudgetCalculator">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/mounthlyamount"
        android:layout_width="285dp"
        android:layout_height="24dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="336dp"
        android:text="@string/monthlyamount"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cal_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/cal_budget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mounthlyamount"
        app:layout_constraintVertical_bias="0.39" />

    <Button
        android:id="@+id/btn_budget_category"
        android:layout_width="310dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/add_new_category_color"
        android:text="@string/budget_category"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_new_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <Button
        android:id="@+id/btn_add_new_category"
        android:layout_width="310dp"
        android:layout_height="52dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="240dp"
        android:backgroundTint="@color/select_a_category"
        android:text="@string/add_new_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider5"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="127dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_budget"
        android:textColor="@color/white"
        android:textSize="@dimen/page_title_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>